--- a/src/main/resources/view/PopupWindow.fxml
+++ b/src/main/resources/view/PopupWindow.fxml
@@ -8,10 +8,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="389.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.address.ui.PopupWindow">
+<AnchorPane prefHeight="389.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PopupWindow">
    <children>
-      <Button layoutX="341.0" layoutY="341.0" mnemonicParsing="false" text="Yes" />
-      <Button layoutX="418.0" layoutY="341.0" mnemonicParsing="false" text="No" />
+      <Button layoutX="341.0" layoutY="341.0" mnemonicParsing="false" onAction="#handleOk" text="Yes" />
+      <Button layoutX="418.0" layoutY="341.0" mnemonicParsing="false" onAction="#handleClose" text="No" />
       <Label layoutX="267.0" layoutY="346.0" prefHeight="21.0" prefWidth="63.0" text="Confirm?" />
       <GridPane gridLinesVisible="true" layoutY="3.0" prefHeight="333.0" prefWidth="512.0">
         <columnConstraints>
@@ -28,19 +28,19 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-            <Label text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-            <Label text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Label text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-            <Label text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-            <Label text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+            <Label fx:id="oldName" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Label fx:id="oldPhone" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Label fx:id="oldEmail" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <Label fx:id="oldAddress" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Label fx:id="oldTags" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+            <Label fx:id="newName" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Label fx:id="newPhone" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Label fx:id="newEmail" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <Label fx:id="newAddress" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Label fx:id="newTags" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
             <Label text="Old" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
             <Label text="New" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-            <Label text="Type" GridPane.halignment="CENTER" />
+            <Label fx:id="type" text="Type" GridPane.halignment="CENTER" />
             <Label text="Name" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
             <Label text="Phone" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
             <Label text="Email" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
