--- a/src/main/resources/view/ExtendedPersonCard.fxml
+++ b/src/main/resources/view/ExtendedPersonCard.fxml
@@ -5,32 +5,26 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-  <VBox fx:id="stackPane" alignment="TOP_LEFT" minHeight="105" spacing="15.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="stackPane" alignment="TOP_LEFT" minHeight="105" spacing="15.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
       <padding>
           <Insets bottom="5" left="5" right="15" top="5" />
       </padding>
       <HBox alignment="TOP_LEFT" spacing="10">
-      <ImageView>
-         <image>
-            <Image url="@../../../../docs/images/icons/student(32px).png" />
-         </image>
-      </ImageView>
           <Label fx:id="name" styleClass="cell_big_label" text="\$first">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
+         <graphic>
+            <ImageView>
+               <image>
+                  <Image url="@../../../../docs/images/icons/student(32px).png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Label>
-          <Label fx:id="id" styleClass="cell_big_label">
-              <minWidth>
-                  <!-- Ensures that the label text is never truncated -->
-                  <Region fx:constant="USE_PREF_SIZE" />
-              </minWidth>
-          </Label>
       </HBox>
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone">
       <graphic>
