--- a/src/main/resources/view/ExtendedPersonCard.fxml
+++ b/src/main/resources/view/ExtendedPersonCard.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,20 +11,18 @@
       <padding>
           <Insets bottom="5" left="5" right="15" top="5" />
       </padding>
-      <HBox alignment="TOP_LEFT" spacing="10">
-          <Label fx:id="name" styleClass="cell_big_label" text="\$first">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-         <graphic>
-            <ImageView>
-               <image>
-                  <Image url="@../../../../docs/images/icons/student(32px).png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Label>
-      </HBox>
+       <Label fx:id="name" styleClass="cell_big_label" text="\$name">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font>
+      <graphic>
+         <ImageView>
+            <image>
+               <Image url="@../../../../docs/images/icons/student(32px).png" />
+            </image>
+         </ImageView>
+      </graphic>
+   </Label>
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone">
       <graphic>
          <ImageView>
@@ -83,7 +80,7 @@
          </ImageView>
       </graphic>
    </Label>
-      <Label fx:id="remark" styleClass="cell_small_label" text="\$remark">
+      <Label fx:id="remark" styleClass="cell_small_label" text="\$remarks">
       <graphic>
          <ImageView>
             <image>
